--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kérdőív</title>
+    <link rel="stylesheet" href="styel.css">
+
 </head>
+
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <li><a href="index.html">Kérdőív</a></li>
+            </li>
+            <li>
+                <li><a href="kepregeny.html">Képregény</a></li>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <div class="kerdes">
+            <label for="name">Név:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="kerdes">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="kerdes">
+            <label>Milyennek vélted a kéregényt?</label>
+            <input type="radio" id="option1" name="option" value="option1" required>
+            <label for="option1">Remek</label>
+            <input type="radio" id="option2" name="option" value="option1" required>
+            <label for="option2">Borzalom</label>
+            <input type="radio" id="option3" name="option" value="option1" required>
+            <label for="option3">Hugy</label>
+        </div>
+        <div class="kerdes">
+            <label>Válassz egy lehetőséget:</label>
+            <input type="radio" id="option1" name="option" value="option1" required>
+            <label for="option1">Opció 1</label>
+            <input type="radio" id="option2" name="option" value="option1" required>
+            <label for="option2">Opció 2</label>
+            <input type="radio" id="option3" name="option" value="option1" required>
+            <label for="option3">Opció 3</label>
+        </div>
+       
+        <div class="submit-btn">
+            <button type="submit">Küldés</button>
+        </div>
+    </div>
+
 </body>
+
 </html>
