kepregény váz kialakitva

--- a/kepregeny.html
+++ b/kepregeny.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="hu">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="oldalalakítás" />
+    <meta name="keywords" content="szemantikus elemek" />
+    <meta name="author" content="Béldy Ádám" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styleKepregeny.css" />
+    <title>Béldy Ádám</title>
+  </head>
+  <body>
+    <main>
+      <header><h1>Címsor</h1></header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Űrlap</a></li>
+        </ul>
+      </nav>
+      <article class="kepregeny">
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><h1>KÉP HELYE</h1></div>
+      </article>
+      <aside id="jobb"><p>jobb aside</p></aside>
+      <footer><p>Béldy Ádám</p></footer>
+    </main>
+  </body>
 </html>
