--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <label for="option3">Hugy</label>
         </div>
         <div class="kerdes">
-            <label>Válassz egy lehetőséget:</label>
-            <input type="radio" id="option1" name="option" value="option1" required>
-            <label for="option1">Opció 1</label>
-            <input type="radio" id="option2" name="option" value="option1" required>
-            <label for="option2">Opció 2</label>
-            <input type="radio" id="option3" name="option" value="option1" required>
-            <label for="option3">Opció 3</label>
+            <label>Ajánlaná másnak is a képregényt? </label>
+            <input type="radio" id="option1" name="option" value="option2" required>
+            <label for="option1">Biztoshh hogy nem xd</label>
+            <input type="radio" id="option2" name="option" value="option2" required>
+            <label for="option2">Igen</label>
+            <input type="radio" id="option3" name="option" value="option2" required>
+            <label for="option3">Nem</label>
         </div>
        
         <div class="submit-btn">
