--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kérdőív</title>
+    <title>Ewemor Martin</title>
     <link rel="stylesheet" href="styel.css">
 
 </head>
@@ -60,12 +60,31 @@
                 <label for="option3">Talán</label>
             </div>
         </div>
+        <div class="kerdes">
+            <label>Meg fogod osztani Facebookon?</label>
+            <div class="radio-container">
+                <input type="radio" id="option1" name="option3" value="option1" required>
+                <label for="option1">Igen</label>
+            </div>
+            <div class="radio-container">
+                <input type="radio" id="option2" name="option3" value="option2" required>
+                <label for="option2">Nem</label>
+            </div>
+            <div class="radio-container">
+                <input type="radio" id="option3" name="option3" value="option3" required>
+                <label for="option3">Talán</label>
+            </div>
+        </div>
+        <div class="kerdes">
+            <textarea name="comment" form="usrform" placeholder="Egyéb megjegyzését írja le ide..."></textarea>
+        </div>
         
        
         <div class="button">
             <button type="submit">Küldés</button>
         </div>
     </div>
+
 
 </body>
 
