képregény majdnem kész

--- a/kepregeny.html
+++ b/kepregeny.html
@@ -7,6 +7,9 @@
     <meta name="author" content="Béldy Ádám" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styleKepregeny.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <title>Béldy Ádám</title>
   </head>
   <body>
@@ -18,24 +21,16 @@
         </ul>
       </nav>
       <article class="kepregeny">
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
-        <div class="kep"><h1>KÉP HELYE</h1></div>
+        <div class="kep"><img src="kepek/a.png" alt="kep"><p>A hősünk neve Jenő aki most kelt fel és megtudta hogy be kell mennie dolgozni, de már 30 perces késésben van így is.</p></div>
+        <div class="kep"><img src="kepek/b.png" alt="kep"><p>Úton a gyárba</p></div>
+        <div class="kep"><img src="kepek/c.png" alt="kep"><p>Hősünk megérkezett munkába hogy elkezdhesse a kóklerkedést minimálbérért.</p></div>
+        <div class="kep"><img src="kepek/d.png" alt="kep"><p>A gyár többi részében már rég folyik a munka.</p></div>
+        <div class="kep"><img src="kepek/e.png" alt="kep"><p>Jenő ül az asztalánál és úgy tesz mintha dolgozna.</p></div>
+        <div class="kep"><img src="kepek/f.png" alt="kep"><p>Hirtelen hívást kap hogy azonnal jelenjen meg a főnöke irodájában, aki végig nézte az egész napos "munkáját" és nem volt megelégedve így kirugta.</p></div>
+        <div class="kep"><img src="kepek/g.png" alt="kep"><p>Hősünk arca mindent elárul hogy mennyire élvezi eddig a napot.</p></div>
+        <div class="kep"><img src="kepek/h.png" alt="kep">Úton haza.</div>
       </article>
-      <aside id="jobb"><p>jobb aside</p></aside>
+      <aside id="jobb"><h1>Nézd meg a többi képregényeinket</h1></aside>
       <footer><p>Béldy Ádám</p></footer>
     </main>
   </body>
