--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 
 </head>
 
+
 <body>
     <nav>
         <ul>
             <li>
-                <li><a href="index.html">Kérdőív</a></li>
+                <li><a href="index.html">Űrlap</a></li>
             </li>
             <li>
                 <li><a href="kepregeny.html">Képregény</a></li>
