--- a/kepregeny.html
+++ b/kepregeny.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <main>
-      <header><h1>Címsor</h1></header>
       <nav>
         <ul>
           <li><a href="index.html">Űrlap</a></li>
         </ul>
       </nav>
+      <header><h1>Jenő egy napja</h1></header>
       <article class="kepregeny">
         <div class="kep"><img src="kepek/a.png" alt="kep"><p>A hősünk neve Jenő aki most kelt fel és megtudta hogy be kell mennie dolgozni, de már 30 perces késésben van így is.</p></div>
         <div class="kep"><img src="kepek/b.png" alt="kep"><p>Úton a gyárba</p></div>
@@ -30,7 +30,15 @@
         <div class="kep"><img src="kepek/g.png" alt="kep"><p>Hősünk arca mindent elárul hogy mennyire élvezi eddig a napot.</p></div>
         <div class="kep"><img src="kepek/h.png" alt="kep">Úton haza.</div>
       </article>
-      <aside id="jobb"><h1>Nézd meg a többi képregényeinket</h1></aside>
+      <aside id="jobb">
+        <h1>Nézd meg a többi képregényeinket</h1>
+        <div class="hirdetes"><img src="kepek/ad/1.png" alt="hirdetes"></div>
+        <div class="hirdetes"><img src="kepek/ad/2.png" alt="hirdetes"></div>
+        <div class="hirdetes"><img src="kepek/ad/3.png" alt="hirdetes"></div>
+        <div class="hirdetes"><img src="kepek/ad/4.png" alt="hirdetes"></div>
+        <div class="hirdetes"><img src="kepek/ad/5.png" alt="hirdetes"></div>
+        <div class="hirdetes"><img src="kepek/ad/6.png" alt="hirdetes"></div>
+    </aside>
       <footer><p>Béldy Ádám</p></footer>
     </main>
   </body>
