--- a/kepregeny.html
+++ b/kepregeny.html
@@ -32,12 +32,12 @@
       </article>
       <aside id="jobb">
         <h1>Nézd meg a többi képregényeinket</h1>
-        <div class="hirdetes"><img src="kepek/ad/1.png" alt="hirdetes"></div>
-        <div class="hirdetes"><img src="kepek/ad/2.png" alt="hirdetes"></div>
-        <div class="hirdetes"><img src="kepek/ad/3.png" alt="hirdetes"></div>
-        <div class="hirdetes"><img src="kepek/ad/4.png" alt="hirdetes"></div>
-        <div class="hirdetes"><img src="kepek/ad/5.png" alt="hirdetes"></div>
-        <div class="hirdetes"><img src="kepek/ad/6.png" alt="hirdetes"></div>
+        <div class="hirdetes"><a href=""><img src="kepek/ad/1.png" alt="hirdetes"></a></div>
+        <div class="hirdetes"><a href=""><img src="kepek/ad/2.png" alt="hirdetes"></a></div>
+        <div class="hirdetes"><a href=""><img src="kepek/ad/3.png" alt="hirdetes"></a></div>
+        <div class="hirdetes"><a href=""><img src="kepek/ad/4.png" alt="hirdetes"></a></div>
+        <div class="hirdetes"><a href=""><img src="kepek/ad/5.png" alt="hirdetes"></a></div>
+        <div class="hirdetes"><a href=""><img src="kepek/ad/6.png" alt="hirdetes"></a></div>
     </aside>
       <footer><p>Béldy Ádám</p></footer>
     </main>
