--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="radio-container">
                 <input type="radio" id="option3" name="option" value="option3" required>
-                <label for="option3">Hugy</label>
+                <label for="option3">Kifejezetten rossz</label>
             </div>
         </div>
         <div class="kerdes">
